--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -9,6 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FlArgentina - Contactate con nosotros</title>
     <script src="https://kit.fontawesome.com/ef7971d24a.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,400;8..144,500&family=Staatliches&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
 </head>
@@ -23,22 +26,22 @@
               <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="header__menu navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link" href="../index.html"><p>Home</p></a>
+                    <a class="nav-link" href="../index.html"><p class="navbar__favicon"><i class="fa-solid fa-house"></i><br>Home</p></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./quienessomos.html"><p>Quienes somos</p></a>
+                    <a class="nav-link" href="./quienessomos.html"><p class="navbar__favicon"><i class="fa-solid fa-person-circle-question"></i><br>Quienes somos</p></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./eventos.html"><p>Eventos</p></a>
+                    <a class="nav-link" href="./eventos.html"><p class="navbar__favicon"><i class="fa-solid fa-calendar"></i><br>Eventos</p></a>
                   </li>
               <li class="nav-item">
-                    <a class="nav-link" href="./partidos.html"><p>Partidos</p></a>
+                    <a class="nav-link" href="./partidos.html"><p class="navbar__favicon"><i class="fa-solid fa-futbol"></i><br>Partidos</p></a>
                   </li>
               <li class="nav-item">
-                    <a class="nav-link" href="./galerias.html"><p>Galeria</p></a>
-                  </li>
+                    <a class="nav-link" href="./galerias.html"><p class="navbar__favicon"><i class="fa-solid fa-camera-retro"></i><br>Galeria</p></a>
+                    </li>
               <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#"><p>Contacto</p></a>
+                    <a class="nav-link active" aria-current="page" href="#"><p class="navbar__favicon"><i class="fa-solid fa-envelope"></i><br>Contacto</p></a>
                   </li>
                 </ul>
               </div>
@@ -134,16 +137,16 @@
     <div class="container-fluid mt-auto pt-1">
       <p class="footer__socialmedia">Conocé a nuestras redes sociales:</p>
       <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-    <ul class="nav col-md-4 justify-content-start list-unstyled d-flex">
-        <li class="ms-3"><a class="text-muted" href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook fa-2xl"></i></a></li>
-        <li class="ms-3"><a class="text-muted" href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter fa-2xl"></i></a></li>
-        <li class="ms-3"><a class="text-muted" href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram fa-2xl"></i></a></li>
-        <li class="ms-3"><a class="text-muted" href="https://www.youtube.com" target="_blank"><i class="fa-brands fa-youtube fa-2xl"></i></a></li>
-    </ul>
-    <div class="col-md-4 d-flex justify-content-end align-items-center">
-      <span class="text-muted">&copy; 2022 FlArgentina</span>
-    </div>
-    </footer>
+        <ul class="nav col-md-4 justify-content-start list-unstyled d-flex">
+          <li class="ms-3"><a class="text-muted" href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook fa-2xl"></i></a></li>
+          <li class="ms-3"><a class="text-muted" href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter fa-2xl"></i></a></li>
+          <li class="ms-3"><a class="text-muted" href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram fa-2xl"></i></a></li>
+          <li class="ms-3"><a class="text-muted" href="https://www.youtube.com" target="_blank"><i class="fa-brands fa-youtube fa-2xl"></i></a></li>
+        </ul>
+        <div class="col-md-4 d-flex justify-content-end align-items-center">
+            <span class="text-muted">&copy; 2022 FlArgentina</span>
+        </div>
+      </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
