--- a/paginas/eventos.html
+++ b/paginas/eventos.html
@@ -8,6 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FlArgentina - Enterate de los eventos y alentá con nosotros</title>
     <script src="https://kit.fontawesome.com/ef7971d24a.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,400;8..144,500&family=Staatliches&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
 </head>
@@ -22,22 +25,22 @@
               <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="header__menu navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link" href="../index.html"><p>Home</p></a>
+                    <a class="nav-link" href="../index.html"><p class="navbar__favicon"><i class="fa-solid fa-house"></i><br>Home</p></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./quienessomos.html"><p>Quienes somos</p></a>
+                    <a class="nav-link" href="./quienessomos.html"><p class="navbar__favicon"><i class="fa-solid fa-person-circle-question"></i><br>Quienes somos</p></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#"><p>Eventos</p></a>
+                    <a class="nav-link active" aria-current="page" href="#"><p class="navbar__favicon"><i class="fa-solid fa-calendar"></i><br>Eventos</p></a>
                   </li>
               <li class="nav-item">
-                    <a class="nav-link" href="./partidos.html"><p>Partidos</p></a>
+                    <a class="nav-link" href="./partidos.html"><p class="navbar__favicon"><i class="fa-solid fa-futbol"></i><br>Partidos</p></a>
                   </li>
               <li class="nav-item">
-                    <a class="nav-link" href="./galerias.html"><p>Galeria</p></a>
+                    <a class="nav-link" href="./galerias.html"><p class="navbar__favicon"><i class="fa-solid fa-camera-retro"></i><br>Galeria</p></a>
                   </li>
               <li class="nav-item">
-                    <a class="nav-link" href="./contacto.html"><p>Contacto</p></a>
+                    <a class="nav-link" href="./contacto.html"><p class="navbar__favicon"><i class="fa-solid fa-envelope"></i><br>Contacto</p></a>
                   </li>
                 </ul>
               </div>
@@ -51,12 +54,14 @@
             <h3 class="padding-top margin-bottom">Próximos eventos</h3>
             <div class="largepadding">
                 <h4 class="padding-top">Final Campeonato Carioca - Ida - 30/03/2022</h4>
-                    <p class="mediumpadding">Nuestro Mengao se enfrentará con Fluminense el próximo miércoles por el partido de ida de la final del Cariocao 2022. Y nosotros estaremos juntos una vez más para acompañar este gran partido.</p>
-                    <div class="evt__container">
+                <p class="mediumpadding">Nuestro Mengao se enfrentará con Fluminense el próximo miércoles por el partido de ida de la final del Cariocao 2022. Y nosotros estaremos juntos una vez más para acompañar este gran partido.</p>
+                  <div class="evt__container">
                     <img class="evt__img" src="../imagenes/final-carioca-1.jpeg" alt="Flamengo se enfrentará con Fluminense">
-                    <div class="evt__imgcaption"><p>Flamengo se clasificó a la final del Campeonato Carioca</p></div>
-                     </div>
-                 <h5 class="padding-top">Donde asistir:</h5>
+                    <div class="evt__imgcaption">
+                      <p>Flamengo se clasificó a la final del Campeonato Carioca</p>
+                    </div>
+                  </div>
+                <h5 class="padding-top">Donde asistir:</h5>
                 <p class="padding-top">Bar Gambino</p>
                 <p class="padding-top">Carlos Gardel 3181 - CABA</p>
                 <p class="padding-top">Pasaje Carlos Gardel, cerca del Shopping Abasto</p>
@@ -64,11 +69,13 @@
             </div>
             <div class="largepadding">
                 <h4 class="padding-top">Final Campeonato Carioca - Vuelta - 02/04/2022</h4>
-                    <p class="mediumpadding">Nuestro Mengao se enfrentará con Fluminense el próximo sábado por el partido de vuelta de la final del Cariocao 2022. Y nosotros estaremos juntos una vez más para asistir al Más Querido en la búsqueda de otra copa para la galería.</p>
-                    <div class="evt__container">
+                <p class="mediumpadding">Nuestro Mengao se enfrentará con Fluminense el próximo sábado por el partido de vuelta de la final del Cariocao 2022. Y nosotros estaremos juntos una vez más para asistir al Más Querido en la búsqueda de otra copa para la galería.</p>
+                  <div class="evt__container">
                     <img class="evt__img" src="../imagenes/final-carioca-2.jpg" alt="Flamengo volverá a enfrentarse con Fluminense en el partido decisivo del Cariocao">
-                    <div class="evt__imgcaption"><p>Flamengo decidirá el Cariocao 2022 con Fluminense</p></div>
-                     </div>
+                    <div class="evt__imgcaption">
+                      <p>Flamengo decidirá el Cariocao 2022 con Fluminense</p>
+                    </div>
+                  </div>
                  <h5 class="padding-top">Donde asistir:</h5>
                 <p class="padding-top">Bar Gambino</p>
                 <p class="padding-top">Carlos Gardel 3181 - CABA</p>
@@ -79,8 +86,8 @@
                 <h4 class="padding-top">Talleres x Flamengo - Copa Libertadores - 04/05/2022</h4>
                     <p class="mediumpadding">Nuestro Mengao estará de vuelta en suelo argentino para un partido de Copa Libertadores. El próximo 4 de mayo nos enfrentaremos con Talleres en el Estadio Mario Alberto Kempes, en Córdoba, por la cuarta fecha del Grupo H. Y nosotros estaremos junto al Más Querido en la cancha para alentar hasta el final.</p>
                     <div class="evt__container">
-                            <img class="evt__img" src="../imagenes/gabigol-libertadores-2019-1.jpg" alt="Gabigol y Flamengo van a Córdoba para medirse con Talleres">
-                            <div class="evt__imgcaption"><p>Gabigol lidera el Mengao en el camnino rumbo a la Gloria Eterna</p></div>
+                        <img class="evt__img" src="../imagenes/gabigol-libertadores-2019-1.jpg" alt="Gabigol y Flamengo van a Córdoba para medirse con Talleres">
+                        <div class="evt__imgcaption"><p>Gabigol lidera el Mengao en el camnino rumbo a la Gloria Eterna</p></div>
                       </div>
                     <h5 class="padding-top">Información:</h5>
                     <p class="padding-top"><i>Próximamente</i></p>
@@ -90,16 +97,16 @@
     <div class="container-fluid mt-auto pt-1">
       <p class="footer__socialmedia">Conocé a nuestras redes sociales:</p>
       <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-    <ul class="nav col-md-4 justify-content-start list-unstyled d-flex">
-        <li class="ms-3"><a class="text-muted" href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook fa-2xl"></i></a></li>
-        <li class="ms-3"><a class="text-muted" href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter fa-2xl"></i></a></li>
-        <li class="ms-3"><a class="text-muted" href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram fa-2xl"></i></a></li>
-        <li class="ms-3"><a class="text-muted" href="https://www.youtube.com" target="_blank"><i class="fa-brands fa-youtube fa-2xl"></i></a></li>
-    </ul>
-    <div class="col-md-4 d-flex justify-content-end align-items-center">
-      <span class="text-muted">&copy; 2022 FlArgentina</span>
-    </div>
-    </footer>
+        <ul class="nav col-md-4 justify-content-start list-unstyled d-flex">
+          <li class="ms-3"><a class="text-muted" href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook fa-2xl"></i></a></li>
+          <li class="ms-3"><a class="text-muted" href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter fa-2xl"></i></a></li>
+          <li class="ms-3"><a class="text-muted" href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram fa-2xl"></i></a></li>
+          <li class="ms-3"><a class="text-muted" href="https://www.youtube.com" target="_blank"><i class="fa-brands fa-youtube fa-2xl"></i></a></li>
+        </ul>
+        <div class="col-md-4 d-flex justify-content-end align-items-center">
+            <span class="text-muted">&copy; 2022 FlArgentina</span>
+        </div>
+      </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
