--- a/paginas/partidos.html
+++ b/paginas/partidos.html
@@ -8,6 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FlArgentina - Las mejores jugadas de cada partido de Flamengo</title>
     <script src="https://kit.fontawesome.com/ef7971d24a.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,400;8..144,500&family=Staatliches&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
 </head>
@@ -22,22 +25,22 @@
               <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="header__menu navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link" href="../index.html"><p>Home</p></a>
+                    <a class="nav-link" href="../index.html"><p class="navbar__favicon"><i class="fa-solid fa-house"></i><br>Home</p></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./quienessomos.html"><p>Quienes somos</p></a>
+                    <a class="nav-link" href="./quienessomos.html"><p class="navbar__favicon"><i class="fa-solid fa-person-circle-question"></i><br>Quienes somos</p></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./eventos.html"><p>Eventos</p></a>
+                    <a class="nav-link" href="./eventos.html"><p class="navbar__favicon"><i class="fa-solid fa-calendar"></i><br>Eventos</p></a>
                   </li>
-              <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#"><p>Partidos</p></a>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#"><p class="navbar__favicon"><i class="fa-solid fa-futbol"></i><br>Partidos</p></a>
                   </li>
-              <li class="nav-item">
-                    <a class="nav-link" href="./galerias.html"><p>Galeria</p></a>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./galerias.html"><p class="navbar__favicon"><i class="fa-solid fa-camera-retro"></i><br>Galeria</p></a>
                   </li>
-              <li class="nav-item">
-                    <a class="nav-link" href="./contacto.html"><p>Contacto</p></a>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./contacto.html"><p class="navbar__favicon"><i class="fa-solid fa-envelope"></i><br>Contacto</p></a>
                   </li>
                 </ul>
               </div>
@@ -58,116 +61,100 @@
                   </h2>
                   <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body">
-                  <p class="padding-top margin-bottom">Flamengo sigue sin jugar su mejor fútbol, pero hizo lo suficiente para imponer su mayor jerarquía sobre su gran rival y volvió a ganar por 1-0. De esta vez, el gol fue anotado por Willian Arao.
-                                  </p>
-                                  <p><strong>Mejores momentos:</strong></p>
-                                      <div class="ytcontainer">
-                                          <iframe width="700" height="384" class="responsive-iframe" src="https://www.youtube.com/embed/wfvmPiqvRYk" title="Flamengo 1 x 0 Vasco" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                                  </div>
-                  </div>
+                        <p class="padding-top margin-bottom">Flamengo sigue sin jugar su mejor fútbol, pero hizo lo suficiente para imponer su mayor jerarquía sobre su gran rival y volvió a ganar por 1-0. De esta vez, el gol fue anotado por Willian Arao.</p>
+                        <p><strong>Mejores momentos:</strong></p>
+                            <div class="ytcontainer">
+                              <iframe width="700" height="384" class="responsive-iframe" src="https://www.youtube.com/embed/wfvmPiqvRYk" title="Flamengo 1 x 0 Vasco" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            </div>
+                      </div>
                   </div>
                 </div>
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="flush-headingTwo">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                      Vasco 0 x 1 Flamengo - 16/03/2022
-                    </button>
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">Vasco 0 x 1 Flamengo - 16/03/2022</button>
                   </h2>
                   <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body">
-                  <p class="padding-top margin-bottom">Flamengo no estuvo en un día muy inspirado, pero aún así logro superar a su gran rival por 1-0. El gol lo hizo Gabigol, de penal.
-                                  </p>
-                                  <p><strong>Mejores momentos:</strong></p>
-                                  <div class="ytcontainer">
-                                      <iframe width="700" height="384" class="responsive-iframe" src="https://www.youtube.com/embed/E514gJufoz8" title="Vasco 0 x 1 Flamengo" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                                    </div>
-                  </div>
+                      <p class="padding-top margin-bottom">Flamengo no estuvo en un día muy inspirado, pero aún así logro superar a su gran rival por 1-0. El gol lo hizo Gabigol, de penal.</p>
+                      <p><strong>Mejores momentos:</strong></p>
+                          <div class="ytcontainer">
+                            <iframe width="700" height="384" class="responsive-iframe" src="https://www.youtube.com/embed/E514gJufoz8" title="Vasco 0 x 1 Flamengo" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                          </div>
+                      </div>
                   </div>
                 </div>
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="flush-headingThree">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                      Bangu 0 x 6 Flamengo - 12/03/2022
-                    </button>
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">Bangu 0 x 6 Flamengo - 12/03/2022</button>
                   </h2>
                   <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body">
-                  <p class="padding-top margin-bottom">Flamengo tuvo una excelente exhibición en el regreso al Maracaná. De Arrascaeta, Gabi (2), Léo Pereira (2) y Matheus Fran&ccedil;a hicieron los goles.
-                                  </p>
-                                  <p><strong>Mejores momentos:</strong></p>
-                                  <div class="ytcontainer">
-                                      <iframe width="700" height="384" class="responsive-iframe" src="https://www.youtube.com/embed/rCaDTLSm0rE" title="Bangu 0 x 6 Flamengo" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                                    </div>
-                  </div>
+                      <p class="padding-top margin-bottom">Flamengo tuvo una excelente exhibición en el regreso al Maracaná. De Arrascaeta, Gabi (2), Léo Pereira (2) y Matheus Fran&ccedil;a hicieron los goles.</p>
+                      <p><strong>Mejores momentos:</strong></p>
+                        <div class="ytcontainer">
+                            <iframe width="700" height="384" class="responsive-iframe" src="https://www.youtube.com/embed/rCaDTLSm0rE" title="Bangu 0 x 6 Flamengo" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                    </div>
                   </div>
                 </div>
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="flush-headingFour">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
-                      Flamengo 2 x 1 Vasco - 06/03/2022
-                    </button>
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">Flamengo 2 x 1 Vasco - 06/03/2022</button>
                   </h2>
                   <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body">
-                  <p class="padding-top margin-bottom">En un partido con muchos altibajos, Flamengo una vez más se utilizó de la mayor jerarquía de su plantel para superar a Vasco por 2-1. Filipe Luís y, ¿cuando no?, De Arrascaeta hicieron los goles del Mengao.
-                                  </p>
-                                  <p><strong>Mejores momentos:</strong></p>
-                                  <div class="ytcontainer">
-                                      <iframe width="700" height="384" class="responsive-iframe" src="https://www.youtube.com/embed/lsBb9VasqhQ" title="Flamengo 2 x 1 Vasco" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                                    </div>
-                  </div>
+                      <p class="padding-top margin-bottom">En un partido con muchos altibajos, Flamengo una vez más se utilizó de la mayor jerarquía de su plantel para superar a Vasco por 2-1. Filipe Luís y, ¿cuando no?, De Arrascaeta hicieron los goles del Mengao.</p>
+                      <p><strong>Mejores momentos:</strong></p>
+                          <div class="ytcontainer">
+                              <iframe width="700" height="384" class="responsive-iframe" src="https://www.youtube.com/embed/lsBb9VasqhQ" title="Flamengo 2 x 1 Vasco" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                          </div>
+                      </div>
                   </div>
                 </div>
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="flush-headingFive">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
-                      Flamengo 2 x 2 Resende - 27/02/2022
-                    </button>
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">Flamengo 2 x 2 Resende - 27/02/2022</button>
                   </h2>
                   <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body">
-                  <p class="padding-top margin-bottom">Flamengo estuvo irreconocible y por muy poco no salió de cancha derrotado ante un muy eficaz y bien plantado Resende, que llegó a estar ganando por dos goles. De Arrascaeta, que entró en el segundo tiempo, hizo nuestro primer gol y Gabigol, de penal, nos dio el empate al minuto 95.
-                                  </p>
-                                  <p><strong>Mejores momentos:</strong></p>
-                                  <div class="ytcontainer">
-                                      <iframe width="700" height="384" class="responsive-iframe" src="https://www.youtube.com/embed/bbqIC0F7r_o" title="Flamengo 2 x 2 Resende" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                                    </div>
-                  </div>
+                      <p class="padding-top margin-bottom">Flamengo estuvo irreconocible y por muy poco no salió de cancha derrotado ante un muy eficaz y bien plantado Resende, que llegó a estar ganando por dos goles. De Arrascaeta, que entró en el segundo tiempo, hizo nuestro primer gol y Gabigol, de penal, nos dio el empate al minuto 95.</p>
+                      <p><strong>Mejores momentos:</strong></p>
+                        <div class="ytcontainer">
+                            <iframe width="700" height="384" class="responsive-iframe" src="https://www.youtube.com/embed/bbqIC0F7r_o" title="Flamengo 2 x 2 Resende" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                    </div>
                   </div>
                 </div>
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="flush-headingSix">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSix" aria-expanded="false" aria-controls="flush-collapseSix">
-                      Botafogo 1 x 3 Flamengo - 23/02/2022
-                    </button>
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSix" aria-expanded="false" aria-controls="flush-collapseSix">Botafogo 1 x 3 Flamengo - 23/02/2022</button>
                   </h2>
                   <div id="flush-collapseSix" class="accordion-collapse collapse" aria-labelledby="flush-headingSix" data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body">
-                  <p class="padding-top margin-bottom">Flamengo dio muestras de evolución y hizo valer su superioridad sobre Botafogo con un triunfo por 3-1. Pedro, Gabi y De Arrascaeta hicieron los goles del Más Querido.
-                                  </p>
-                                  <p><strong>Mejores momentos:</strong></p>
-                                  <div class="ytcontainer">
-                                      <iframe width="700" height="384" class="responsive-iframe" src="https://www.youtube.com/embed/L0MRUWZF1pM" title="Botafogo 1 x 3 Flamengo" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                                    </div>
-                  </div>
+                      <p class="padding-top margin-bottom">Flamengo dio muestras de evolución y hizo valer su superioridad sobre Botafogo con un triunfo por 3-1. Pedro, Gabi y De Arrascaeta hicieron los goles del Más Querido.</p>
+                      <p><strong>Mejores momentos:</strong></p>
+                          <div class="ytcontainer">
+                              <iframe width="700" height="384" class="responsive-iframe" src="https://www.youtube.com/embed/L0MRUWZF1pM" title="Botafogo 1 x 3 Flamengo" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                          </div>
+                      </div>
                   </div>
                 </div>	
               </div>
         </div>
     </main>
-    <div class="container-fluid mt-5 pt-5">
+    <div class="container-fluid mt-auto pt-1">
       <p class="footer__socialmedia">Conocé a nuestras redes sociales:</p>
       <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-    <ul class="nav col-md-4 justify-content-start list-unstyled d-flex">
-        <li class="ms-3"><a class="text-muted" href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook fa-2xl"></i></a></li>
-        <li class="ms-3"><a class="text-muted" href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter fa-2xl"></i></a></li>
-        <li class="ms-3"><a class="text-muted" href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram fa-2xl"></i></a></li>
-        <li class="ms-3"><a class="text-muted" href="https://www.youtube.com" target="_blank"><i class="fa-brands fa-youtube fa-2xl"></i></a></li>
-    </ul>
-    <div class="col-md-4 d-flex justify-content-end align-items-center">
-      <span class="text-muted">&copy; 2022 FlArgentina</span>
-    </div>
-    </footer>
+        <ul class="nav col-md-4 justify-content-start list-unstyled d-flex">
+          <li class="ms-3"><a class="text-muted" href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook fa-2xl"></i></a></li>
+          <li class="ms-3"><a class="text-muted" href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter fa-2xl"></i></a></li>
+          <li class="ms-3"><a class="text-muted" href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram fa-2xl"></i></a></li>
+          <li class="ms-3"><a class="text-muted" href="https://www.youtube.com" target="_blank"><i class="fa-brands fa-youtube fa-2xl"></i></a></li>
+        </ul>
+        <div class="col-md-4 d-flex justify-content-end align-items-center">
+            <span class="text-muted">&copy; 2022 FlArgentina</span>
+        </div>
+      </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
